# pl4m_com

./: .gitignore  run_dev.sh
api/: API_DOCS.md  Dockerfile  app.py  deploy.sh  pl4m_utils  requirements.txt
gcp/containers/flask_api/: Dockerfile  README.md  app.py
gcp/terraform/: main.tf  variables.tf
gcp/terraform/modules/cloud_run/: outputs.tf
gcp/terraform/modules/firestore/: main.tf  variables.tf
infrastructure/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/: README.md
infrastructure/modules/artifact_registry/: main.tf
infrastructure/modules/cloud_run/: main.tf  variables.tf
infrastructure/modules/firestore/: main.tf
infrastructure/modules/load_balancer/: main.tf  outputs.tf  variables.tf
infrastructure/modules/storage/: main.tf  variables.tf
misc/: index.html
pl4m_utils/: README.md  firestore.indexes.yaml  pyproject.toml
pl4m_utils/notebooks/: notebook_metadata_manager.ipynb
pl4m_utils/src/archive/: blog_manager.py  document_manager.py  image_manager.py  test_content_generator.py
pl4m_utils/src/pl4m_utils/: __init__.py  config.py  content_manager.py  metadata_manager.py
pl4m_utils/src/pl4m_utils/api/: __init__.py  content_flask_bp.py  openapi.yaml
pl4m_utils/tests/: conftest.py  test_blog_manager.py  test_content_manager.py  test_document_manager.py  test_image_manager.py  test_metadata_manager.py
website/: next.config.js  package-lock.json  package.json
website/src/pages/: _app.tsx  feed.tsx  index.tsx
website/src/styles/: main.css
website/src/types/: content.ts
(+7 files in other folders)
